Corrected the z-index for the mobile menu

--- a/app/_assets/stylesheets/responsive/_mobile-cart.sass
+++ b/app/_assets/stylesheets/responsive/_mobile-cart.sass
@@ -4,7 +4,7 @@
 
 @media (max-width: 992px) 
   .mobile-cart
-    z-index: 999
+    z-index: 996
     top: 6px
     right: 10px
     position: absolute
