--- a/app/_assets/stylesheets/responsive/_mobile-navicon.sass
+++ b/app/_assets/stylesheets/responsive/_mobile-navicon.sass
@@ -20,6 +20,10 @@
   #mobile-nav
     width: 100%
     display: none
+    position: absolute
+    top: 0
+    z-index: 998
+    background: #fff
     ul
       margin: 8px 0 0 0 
       padding: 0
